--- a/live-graphs.ipynb
+++ b/live-graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,27 +19,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = deque(maxlen=20)\n",
-    "Y = deque(maxlen=20)"
+    "X = deque(maxlen=40)\n",
+    "Y = deque(maxlen=40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "X.append(1)\n",
-    "Y.append(1)"
+    "Y.append(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "    dcc.Graph(id='live-graph', animate=True),\n",
     "    dcc.Interval(\n",
     "        id='graph-update',\n",
-    "        interval=1000\n",
+    "        interval=2000\n",
     "    ),\n",
     "    ]\n",
     ")"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,8 @@
     "              [Input('graph-update', 'n_intervals')])\n",
     "def update_graph_scatter(input_data):\n",
     "    X.append(X[-1]+1)\n",
-    "    Y.append(Y[-1]+Y[-1]*random.uniform(-0.1,0.1))\n",
+    "    #exponential growth\n",
+    "    Y.append(Y[-1]+Y[-1]*random.uniform(-0.1,0.3))\n",
     "\n",
     "    data = plotly.graph_objs.Scatter(\n",
     "            x=list(X),\n",
@@ -87,11 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "  <iframe src=\"/app/endpoints/7e2281245cc043ef99df1b9701f5dff9/\" width=800 height=600 frameborder=\"0\"></iframe>\n",
+       "  <hr/><a href=\"/app/endpoints/7e2281245cc043ef99df1b9701f5dff9/\" target=\"_new\">Open in new window</a> for /app/endpoints/7e2281245cc043ef99df1b9701f5dff9/\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<jupyter_plotly_dash.dash_wrapper.JupyterDash at 0x10a1c4710>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "app"
    ]
